# backlink-pricing-model

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/hooks/: pre-push
.github/workflows/: lint.yml  test.yml
configs/: preprocessing.yaml  training.yaml
notebooks/: 01_data_loading_and_eda.ipynb  02_feature_engineering_and_selection.ipynb  03_modeling_and_evaluation.ipynb
scripts/: __init__.py  evaluate.py  generate_sample.py  predict.py  preprocess.py  train.py  train_autogluon.py
scripts/data_pipeline/: __init__.py  main.py  models.py
src/backlink_pricing_model/: __init__.py
src/backlink_pricing_model/analysis/: __init__.py  feature_selection.py  model_selection.py  shap_analysis.py  statistical_tests.py
src/backlink_pricing_model/core/: __init__.py  config.py  environment.py  logging.py  notebook.py
src/backlink_pricing_model/core/models/: __init__.py  preprocessing.py  visualization.py
src/backlink_pricing_model/core/schemas/: analysis.py  training_config.py
src/backlink_pricing_model/modeling/: __init__.py  artifact_naming.py  baseline_models.py  thresholding.py  training_hooks.py
src/backlink_pricing_model/preprocessing/: __init__.py  auto_features.py  data_imputation.py  data_loading.py  data_quality.py  feature_engineering.py  feature_evaluation.py  feature_transformers.py
src/backlink_pricing_model/utils/: warnings_config.py
src/backlink_pricing_model/visualization/: __init__.py  distributions_plots.py  importance_plots.py  models_plots.py  plots_style.py
tests/: conftest.py
tests/backlink_pricing_model/: conftest.py
tests/backlink_pricing_model/analysis/: test_feature_selection.py  test_shap_analysis.py  test_statistical_tests.py
tests/backlink_pricing_model/core/: test_config.py  test_environment.py  test_logging.py  test_notebook.py
tests/backlink_pricing_model/core/models/: test_analysis.py  test_preprocessing.py  test_training_config.py
tests/backlink_pricing_model/core/schemas/: test_analysis.py  test_preprocessing.py  test_training_config.py
tests/backlink_pricing_model/modeling/: conftest.py  test_artifact_naming.py  test_baseline_models.py  test_thresholding.py  test_training_hooks.py
tests/backlink_pricing_model/preprocessing/: conftest.py  test_data_imputation.py  test_data_loading.py  test_data_quality.py  test_feature_engineering.py  test_feature_evaluation.py  test_feature_transformers.py
tests/backlink_pricing_model/utils/: test_warnings_config.py
tests/backlink_pricing_model/visualization/: conftest.py  test_distributions_plots.py  test_importance_plots.py  test_models_plots.py  test_plots_style.py
