[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backlink_pricing_model"]

[project]
name = "backlink-pricing-model"
version = "0.1.0"
description = "Backlink pricing prediction model using Ahrefs and Majestic SEO metrics"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Vytautas Bunevicius", email = "vytautas@bunevicius.com" }
]
license = { text = "Unlicense" }
keywords = ["backlinks", "seo", "pricing", "machine-learning", "ahrefs", "majestic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2",
    "pandas>=2.2",
    "scikit-learn>=1.7",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "optuna>=4",
    "shap>=0.51",
    "joblib>=1.4",
    "pyarrow>=18",
    "plotly>=6.1.1",
    "kaleido>=1.1",
    "pydantic>=2.10",
    "click>=8",
    "tqdm>=4.66",
    "ipython>=9.11.0",
    "jinja2>=3.1",
    "pyyaml>=6",
    "scipy-stubs~=1.16.3",
    "pandas-stubs~=2.3.3",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=7.2",
    "ipython>=9.11",
    "ipywidgets>=8.1",
    "jupyterlab>=4.5",
    "jupytext>=1.19",
    "matplotlib>=3.10",
    "nbconvert>=7.17",
    "notebook>=7.5",
]
extraction = [
    "supabase>=2",
    "python-dotenv>=1.2",
]
dev = [
    "pytest>=9",
    "ruff==0.15.7",
    "vulture>=2.15",
    "pandas-stubs>=2.2.3",
    "ty==0.0.24",
]

[dependency-groups]
dev = [
    "vulture>=2.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PL",  # pylint
    "RUF", # ruff-specific rules
    "TID", # flake8-tidy-imports (forbid relative imports)
    "D",   # pydocstyle
]
ignore = [
    "E501", # line-too-long (handled by formatter)
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # magic-value-comparison
    "S101",    # use-of-assert
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["backlink_pricing_model"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["src", "scripts"]
exclude = ["notebooks"]
