[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backlink_pricing_model"]

[project]
name = "backlink-pricing-model"
version = "0.1.0"
description = "Backlink pricing prediction model using Ahrefs and Majestic SEO metrics"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Vytautas Bunevicius", email = "vytautas@bunevicius.com" }
]
license = { text = "Unlicense" }
keywords = ["backlinks", "seo", "pricing", "machine-learning", "ahrefs", "majestic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.1,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.7,<2",
    "scipy>=1.14,<2",
    "statsmodels>=0.14,<1",
    "xgboost>=3.1,<4",
    "lightgbm>=4.5,<5",
    "optuna>=4,<5",
    "joblib>=1.4,<2",
    "pyarrow>=18,<24",
    "plotly>=6.1.1,<7",
    "kaleido>=1.1,<2",
    "pydantic>=2.10,<3",
    "click>=8,<9",
    "tqdm>=4.66,<5",
    "mlflow>=2.19,<3",
    "ipython>=9.11,<10",
    "jinja2>=3.1,<4",
    "pyyaml>=6,<7",
    "openfe>=0.0.11,<1",
    "ipykernel>=7.2",
]

[project.optional-dependencies]
interpretability = [
    "shap>=0.51; python_version < '3.14'",
]
notebook = [
    "ipykernel>=7.2",
    "ipython>=9.11",
    "ipywidgets>=8.1",
    "jupyterlab>=4.5",
    "jupytext>=1.19",
    "matplotlib>=3.10",
    "nbconvert>=7.17",
    "notebook>=7.5",
]
autogluon = [
    "autogluon.tabular[all]>=1.2",
]
extraction = [
    "supabase>=2",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.2",
]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=6,<7",
    "ruff==0.15.7",
    "vulture>=2.15,<3",
    "pandas-stubs>=2.2.3,<3",
    "scipy-stubs>=1.16,<2",
    "ty==0.0.24",
]

[project.scripts]
backlink-extract = "scripts.data_pipeline.main:main"
backlink-preprocess = "scripts.preprocess:main"
backlink-train = "scripts.train:main"
backlink-evaluate = "scripts.evaluate:main"
backlink-predict = "scripts.predict:main"
backlink-train-ag = "scripts.train_autogluon:main"
backlink-generate-sample = "scripts.generate_sample:main"

[dependency-groups]
dev = [
    "vulture>=2.15",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.analysis]
allowed-unresolved-imports = [
    "google.colab.**",
    "autogluon.**",
]

[[tool.ty.overrides]]
include = ["notebooks/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src"]
preview = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PL",  # pylint
    "RUF", # ruff-specific rules
    "TID", # flake8-tidy-imports (forbid relative imports)
    "D",   # pydocstyle
    "DOC", # pydoclint
]
ignore = [
    "E501", # line-too-long (handled by formatter)
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",       # docstrings not required in tests (Google style 3.8.2.1)
    "PLR2004", # magic-value-comparison
    "PLC2701", # private-name-import — tests legitimately exercise private helpers
    "S101",    # use-of-assert
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["backlink_pricing_model"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["src", "scripts"]
exclude = ["notebooks"]
